--- a/src/main/webapp/app/ui/stats/stats.html
+++ b/src/main/webapp/app/ui/stats/stats.html
@@ -1,4 +1,24 @@
-<div style=" color:white">
+<div>
+<div class="container-fluid" >
+    <div class="row">
+        <nav class="navbar navbar-inverse stats-submenu">
+            <ul class="nav navbar-nav">
+                <li>
+                    <a ng-class="{active:isStat(1)}" ng-click="choseStat(1)">
+                        Running Statistics
+                    </a>
+                </li>
+                <li>
+                    <a ng-class="{active:isStat(2)}" ng-click="choseStat(2)">
+                        Training Statistics
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+</div>
+<div class="row">
 
-    KURWA JEGO MAĆ DZIAŁAJ
+</div>
+
 </div>
