Dodanie obrazkow do cwiczen

--- a/src/main/webapp/app/ui/atlas/atlas.html
+++ b/src/main/webapp/app/ui/atlas/atlas.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="col-lg-8 col-md-8 atlas-img">
                         <h4> Image: </h4>
-                            <img src="{{'../images/atlas/'+currentExercise.id + '.jpg'}}">
+                            <img src="{{'content/images/atlas/exc_'+currentExercise.id + '.png'}}">
                     </div>
                 </div>
 
