Podpisy do kafli

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -2,14 +2,14 @@
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="section ">
             <div ui-sref="tren" class="block tren animated fadeInLeft">
-
+                <p class="textinbox">Trainings</p>
             </div>
         </div>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="section ">
             <div ui-sref="atlas" class="block atl animated fadeInRight">
-
+                <p class="textinbox">Atlas</p>
             </div>
         </div>
     </div>
@@ -19,16 +19,15 @@
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="section ">
             <div ui-sref="calc" class="block bmi animated fadeInLeft">
-
+                <p class="textinbox">Calculators</p>
             </div>
         </div>
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="section ">
             <div ui-sref="stats" class="block stat animated fadeInRight">
-
+                <p class="textinbox">Statistics</p>
             </div>
-
         </div>
     </div>
 </div>
