--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -50,7 +50,7 @@
                         <li class="scroll"><a>Features</a></li>
                         <li class="scroll"><a>Comments</a></li>
                         <li class="scroll"><a>Join Us</a></li>
-                        <li class=""><a href="./#/">Log In</a></li>
+                        <li class=""><a href="./#/">Application</a></li>
                     </ul>
                 </div>
             </div>
@@ -243,14 +243,14 @@
             <div class="popup-block">
                 <div class="login-block">
                     <div class="close">x</div>
-                    <h3>Log In</h3>
+                    <h3>Application</h3>
                     <hr class="divider"/>
                     <form>
                         <p>Login:</p>
                         <input type="text"/>
                         <p>Password:</p>
                         <input type="password">
-                        <button class="login-button" type="submit">Log In</button>
+                        <button class="login-button" type="submit">Application</button>
                     </form>
                     <hr class="divider"/>
                     <a class="register-link">Don't have an account? Register here</a>
