--- a/src/main/webapp/app/ui/calc/calc.html
+++ b/src/main/webapp/app/ui/calc/calc.html
@@ -1,4 +1,4 @@
-<div ng-controller="calculatorController as calc" >
+<div >
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 ">
         <nav class="navbar navbar-inverse calc-submenu">
