--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -31,3 +31,12 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="section ">
+            <div ui-sref="product" class="block diet animated fadeInLeft">
+                <p class="textinbox">Diet</p>
+            </div>
+        </div>
+    </div>
+</div>
