--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -65,6 +65,12 @@
 <script src="app/ui/tren/tren.controller.js"></script>
 <script src="app/ui/stats/stats.state.js"></script>
 <script src="app/ui/stats/stats.controller.js"></script>
+<script src="app/blocks/config/localstorage.config.js"></script>
+<script src="app/blocks/config/http.config.js"></script>
+<script src="app/blocks/config/compile.config.js"></script>
+<script src="app/blocks/config/alert.config.js"></script>
+<script src="app/ui/product/product.state.js"></script>
+<script src="app/ui/product/product.controller.js"></script>
 <script src="app/ui/calc/calc.state.js"></script>
 <script src="app/ui/calc/calc.controller.js"></script>
 <script src="app/ui/atlas/atlas.state.js"></script>
@@ -72,6 +78,7 @@
 <script src="app/services/user/user.service.js"></script>
 <script src="app/services/ui/tren.service.js"></script>
 <script src="app/services/ui/stats.service.js"></script>
+<script src="app/services/ui/product.service.js"></script>
 <script src="app/services/ui/atlas.service.js"></script>
 <script src="app/services/auth/sessions.service.js"></script>
 <script src="app/services/auth/register.service.js"></script>
@@ -114,10 +121,6 @@
 <script src="app/blocks/interceptor/errorhandler.interceptor.js"></script>
 <script src="app/blocks/interceptor/auth-expired.interceptor.js"></script>
 <script src="app/blocks/handlers/state.handler.js"></script>
-<script src="app/blocks/config/localstorage.config.js"></script>
-<script src="app/blocks/config/http.config.js"></script>
-<script src="app/blocks/config/compile.config.js"></script>
-<script src="app/blocks/config/alert.config.js"></script>
 <script src="app/admin/user-management/user-management.state.js"></script>
 <script src="app/admin/user-management/user-management.controller.js"></script>
 <script src="app/admin/user-management/user-management-dialog.controller.js"></script>
