--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <div class="section ">
-            <div ui-sref="tren" class="block tren animated fadeInLeft">
+            <div ui-sref="training" class="block tren animated fadeInLeft">
                 <p class="textinbox">Trainings</p>
             </div>
         </div>
@@ -36,6 +36,13 @@
         <div class="section ">
             <div ui-sref="product" class="block diet animated fadeInLeft">
                 <p class="textinbox">Diet</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <div class="section ">
+            <div ui-sref="run" class="block run animated fadeInRight">
+                <p class="textinbox">Run</p>
             </div>
         </div>
     </div>
