--- a/src/main/webapp/app/ui/tren/tren.html
+++ b/src/main/webapp/app/ui/tren/tren.html
@@ -1,65 +1,40 @@
-<div class="row">
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-        <nav class="navbar navbar-inverse tren-submenu">
-            <ul class="nav navbar-nav">
-                <li><a>Create Training</a></li>
-                <li><a>Training History</a></li>
-            </ul>
-        </nav>
+<div>
+    <h2>Trainings</h2>
+    <jhi-alert></jhi-alert>
+    <br/>
+    <div class="table-responsive">
+        <table class="jh-table table table-striped">
+            <thead>
+            <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
+                <th jh-sort-by="id"><span>ID</span> <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="duration"><span>Duration</span> <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="dateTime"><span>Date</span> <span class="glyphicon glyphicon-sort"></span></th>
+                <th jh-sort-by="name"><span>Name</span> <span class="glyphicon glyphicon-sort"></span></th>
+                <th></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="training in vm.trainings track by training.id">
+                <td><a ui-sref="training-detail({id:training.id})">{{training.id}}</a></td>
+                <td>{{training.duration}}</td>
+                <td>{{training.dateTime | date:'mediumDate'}}</td>
+                <td>{{training.name}}</td>
+                <td class="text-right">
+                    <div class="btn-group flex-btn-group-container">
+                        <button type="submit"
+                                ui-sref="training-detail({id:training.id})"
+                                class="btn btn-info btn-sm">
+                            <span class="glyphicon glyphicon-eye-open"></span>
+                            <span class="hidden-xs hidden-sm"></span>
+                        </button>
+                    </div>
+                </td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-</div>
-<div class="container-fluid">
-    <div class="row calc-content">
-        <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 dates-list">
-            <h3>Training Date</h3>
-            <div class="list">
-                <div class = "train-date" ng-repeat="item in items" ng-click="getTrainingInfo(items.indexOf(item))">
-                    {{item.trainingDate}}
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-            <div class="row ">
-                <h3>Details</h3>
-                <div class="exercise-info">
-                    <div class="col-lg-5 col-md-5 col-sm-5 col-xs=5">
-                        <p>Date: {{selected.trainingDate}}</p>
-                    </div>
-                    <div class="col-lg-5 col-md-5 col-sm-5 col-xs=5">
-                        <p>Done: {{selected.done}}</p>
-                    </div>
-                </div>
-            </div>
-            <h3>Exercises:</h3>
-            <!--<div class="row exercise-block">-->
-            <div class="row exercise-block" ng-repeat="detail in selected.exersiseDTOList">
-                <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
-                    <div ng-if="detail.done == false" class="warunek">
-                        <img src="../../../content/images/not.png">
-                        <p style="color:#000000;">Omitted</p>
-                    </div>
-                    <div ng-if="detail.done == true" class="warunek">
-                        <img src="../../../content/images/yes.png">
-                        <p style="color:#00d600;">Done</p>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 ">
-                    <h5>{{detail.bodyPart}}</h5>
-                    <h4>{{detail.name}}</h4>
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 detail">
-                    <h4>Series:</h4>
-                    {{detail.series}}
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 detail">
-                    <h4>Repeatation:</h4>
-                    {{detail.repeatation}}
-                </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 detail">
-                    <h4>Weight:</h4>
-                    {{detail.weight}}
-                </div>
-            </div>
-        </div>
+    <div class="text-center">
+        <jhi-item-count page="vm.page" total="vm.queryCount"></jhi-item-count>
+        <uib-pagination class="pagination-sm" total-items="vm.totalItems" ng-model="vm.page" ng-change="vm.transition()"></uib-pagination>
     </div>
 </div>
