--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -63,12 +63,9 @@
 <script src="app/account/reset/finish/reset.finish.controller.js"></script>
 <script src="app/ui/tren/tren.state.js"></script>
 <script src="app/ui/tren/tren.controller.js"></script>
+<script src="app/ui/tren/training-detail.controller.js"></script>
 <script src="app/ui/stats/stats.state.js"></script>
 <script src="app/ui/stats/stats.controller.js"></script>
-<script src="app/blocks/config/localstorage.config.js"></script>
-<script src="app/blocks/config/http.config.js"></script>
-<script src="app/blocks/config/compile.config.js"></script>
-<script src="app/blocks/config/alert.config.js"></script>
 <script src="app/ui/product/product.state.js"></script>
 <script src="app/ui/product/product.controller.js"></script>
 <script src="app/ui/calc/calc.state.js"></script>
@@ -121,6 +118,10 @@
 <script src="app/blocks/interceptor/errorhandler.interceptor.js"></script>
 <script src="app/blocks/interceptor/auth-expired.interceptor.js"></script>
 <script src="app/blocks/handlers/state.handler.js"></script>
+<script src="app/blocks/config/localstorage.config.js"></script>
+<script src="app/blocks/config/http.config.js"></script>
+<script src="app/blocks/config/compile.config.js"></script>
+<script src="app/blocks/config/alert.config.js"></script>
 <script src="app/admin/user-management/user-management.state.js"></script>
 <script src="app/admin/user-management/user-management.controller.js"></script>
 <script src="app/admin/user-management/user-management-dialog.controller.js"></script>
