Bieganie, in progress.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -66,6 +66,9 @@
 <script src="app/ui/tren/training-detail.controller.js"></script>
 <script src="app/ui/stats/stats.state.js"></script>
 <script src="app/ui/stats/stats.controller.js"></script>
+<script src="app/ui/run/run.state.js"></script>
+<script src="app/ui/run/run.controller.js"></script>
+<script src="app/ui/run/run-detail.controller.js"></script>
 <script src="app/ui/product/product.state.js"></script>
 <script src="app/ui/product/product.controller.js"></script>
 <script src="app/ui/calc/calc.state.js"></script>
@@ -75,6 +78,7 @@
 <script src="app/services/user/user.service.js"></script>
 <script src="app/services/ui/tren.service.js"></script>
 <script src="app/services/ui/stats.service.js"></script>
+<script src="app/services/ui/run.service.js"></script>
 <script src="app/services/ui/product.service.js"></script>
 <script src="app/services/ui/atlas.service.js"></script>
 <script src="app/services/auth/sessions.service.js"></script>
