Poprawione stylizowanie tabelki z produktami

--- a/src/main/webapp/app/ui/product/product.html
+++ b/src/main/webapp/app/ui/product/product.html
@@ -1,12 +1,19 @@
 <div ng-controller="productController as product" ng-init = "init()" >
 
-    <table>
-        <tr ng-repeat="x in products">
-            <td>{{ x.name }}</td>
-            <td>{{ x.carbohydrates }}</td>
-            <td>{{ x.protein }}</td>
-            <td>{{ x.fat }}</td>
-            <td>{{ x.kcal}}</td>
+    <table class="prod-table">
+        <thead class="prod-table-header">
+            <td class="prod-name">Name</td>
+            <td class="prod-ch">Carbohydrates</td>
+            <td class="prod-protein">Protein</td>
+            <td class="prod-fat">Fat</td>
+            <td class="prod-kcal">Kcal</td>
+        </thead>
+        <tr ng-repeat="x in products" class="prod-table-content">
+            <td class="prod-name">{{ x.name }}</td>
+            <td class="prod-ch">{{ x.carbohydrates }}</td>
+            <td class="prod-protein">{{ x.protein }}</td>
+            <td class="prod-fat">{{ x.fat }}</td>
+            <td class="prod-kcal">{{ x.kcal}}</td>
         </tr>
     </table>
 </div>
